other/replace-image-registry-with-harbor/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: replace-image-registry-with-harbor-ns
