other/replace-image-registry-with-harbor/.chainsaw-test/pod-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: replace-image-registry-with-harbor-ns
spec:
  containers:
  - name: busybox
    image: harbor.example.com/k8s/busybox:1.35
  - name: busybox02
    image: harbor.example.com/k8s/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: replace-image-registry-with-harbor-ns
spec:
  initContainers:
  - name: kyverno
    image: harbor.example.com/k8s/kyverno:1.11.3
  - name: busybox-init
    image: harbor.example.com/k8s/busybox:1.35
  containers:
  - name: busybox
    image: harbor.example.com/k8s/kyverno:1.11.3
  - name: busybox02
    image: harbor.example.com/k8s/busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
  namespace: replace-image-registry-with-harbor-ns
spec:
  initContainers:
  - name: kyverno
    image: harbor.example.com/k8s/kyverno:1.11.3
  - name: busybox-init
    image: harbor.example.com/k8s/foo/bar/baz/busybox:1.35
  containers:
  - name: busybox
    image: harbor.example.com/k8s/kyverno:1.11.3
  - name: busybox02
    image: harbor.example.com/k8s/foo/bar/baz/busybox:1.35
