other/replace-image-registry-with-harbor/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: replace-image-registry-with-harbor
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
