other/replace-image-registry-with-harbor/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: replace-image-registry-with-harbor
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../replace-image-registry-with-harbor.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - assert:
        file: pod-patched.yaml
  - name: step-03
    try:
    - command:
        args:
        - delete
        - all
        - --all
        - --force
        - --grace-period=0
        - -n
        - replace-image-registry-with-harbor-ns
        entrypoint: kubectlp
